<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textVisiblePassword"
                android:text="@string/default_password"
                android:id="@+id/txtPassword" />
        </LinearLayout>

        <TextView
            android:text="@string/input_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="5"
            android:inputType="textMultiLine"
            android:text="@string/text_sample"
            android:id="@+id/txtInput" />

        <TextView
            android:text="@string/crypt_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:id="@+id/radio_mode">
            <RadioButton
                android:text="@string/aes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:layout_marginRight="20dp"
                android:id="@+id/cbAES" />
            <RadioButton
                android:text="@string/zuc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:enabled="false"
                android:id="@+id/cbZUC" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <Button
                android:text="@string/encrypt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnEncrypt" />

            <Button
                android:text="@string/decrypt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnDecrypt" />

            <Button
                android:text="@string/copy_output_to_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnCopyOutput2Input" />
        </LinearLayout>

        <TextView
            android:text="@string/output_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="5"
            android:inputType="textMultiLine"
            android:id="@+id/txtOutput" />
    </LinearLayout>

</ScrollView>

